# textedit_u1351484

./: Assignment_1_specs.md  README.md  forloop  main.py  note1.txt  pyproject.toml  requirements.txt
src/: app.py  editor.py  file_tree.py  find_replace.py  main_window.py  split_container.py  tab_widget.py
tests/: test_editor.py  test_filetree.py  test_find_replace.py
